[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/LevelManager/interface/icons/CanvasItem.svg" type="Texture" id=1]
[ext_resource path="res://addons/LevelManager/interface/generics/generic_level_data_container.gd" type="Script" id=2]

[node name="GenericLvlDataContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 52.0

[node name="ConstLabels" type="VBoxContainer" parent="HBoxContainer3"]
margin_right = 60.0
margin_bottom = 52.0
size_flags_vertical = 5

[node name="Label" type="Label" parent="HBoxContainer3/ConstLabels"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
size_flags_vertical = 6
text = "Nombre: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HBoxContainer3/ConstLabels"]
margin_top = 33.0
margin_right = 60.0
margin_bottom = 47.0
size_flags_vertical = 6
text = "Fuente: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditLabels" type="VBoxContainer" parent="HBoxContainer3"]
margin_left = 64.0
margin_right = 992.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="NameLabel" type="LineEdit" parent="HBoxContainer3/EditLabels"]
margin_right = 928.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="DirLabel" type="LineEdit" parent="HBoxContainer3/EditLabels"]
margin_top = 28.0
margin_right = 928.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer3"]
margin_left = 996.0
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 50.0
size_flags_vertical = 4

[node name="NameEditButton" type="Button" parent="HBoxContainer3/Buttons"]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 1 )

[node name="SourceEditButton" type="Button" parent="HBoxContainer3/Buttons"]
margin_top = 26.0
margin_right = 28.0
margin_bottom = 48.0
icon = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 60.0
[connection signal="pressed" from="HBoxContainer3/Buttons/NameEditButton" to="." method="_on_NameEditButton_pressed"]
[connection signal="pressed" from="HBoxContainer3/Buttons/SourceEditButton" to="." method="_on_SourceEditButton_pressed"]
